Update screenshot. Fix spacing on larger screen size.

--- a/styles/app.css
+++ b/styles/app.css
@@ -94,12 +94,27 @@ body {
 .PasswordGenBody__settingsContainer {
   display: grid;
   grid-template-rows: repeat(3, auto);
-
   gap: 32px;
 }
 
 @media (min-width: 600px) {
+  .PasswordGenContainer {
+    gap: 32px;
+  }
+
   .PasswordGenHeader__title {
     font: var(--fontPreset2);
+  }
+
+  .PasswordGenBody {
+    gap: 24px;
+  }
+
+  .PasswordGenBody__passwordDisplayContainer {
+    padding: 16px 32px;
+  }
+
+  .PasswordGenBody__settingsContainer {
+    padding: 24px 32px;
   }
 }
